--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -310,12 +310,12 @@ aside {
 
     // responsive to tablet
     @media only screen and (max-width: $tablet) {
-        font-size: 1.6rem;
+        font-size: 1.5rem;
         filter: none;
         border: none;
         border-bottom: $default-border;
         border-radius: 0;
-        padding: 10px 15px;
+        padding: 5px;
         padding-bottom: 0;
         max-width: 100vw;
         letter-spacing: 1.5px;
@@ -463,6 +463,7 @@ main {
             filter: $default-shadow;
             margin: 0;
             padding: 0;
+            margin-bottom: 20px;
         }
         .updated-date {
             font-style: italic;
@@ -496,8 +497,8 @@ main {
         @media only screen and (max-width: $tablet) {
             h3 {
                 text-align: center;
-                margin-top: 20px;
-                margin-bottom: 10px;
+                margin-top: 30px;
+                margin-bottom: 20px;
             }
             .updated-date {
                 order: 5;
